--- a/src/components/ThemeIcon.astro
+++ b/src/components/ThemeIcon.astro
@@ -17,11 +17,11 @@
         rotate: 10deg;
     }
 
-    .moon { fill: #fdebf3; }
+    .moon { fill: #8fbcbb; }
     .sun { fill: transparent; }
 
     :global(.light) .moon { fill: transparent; }
-    :global(.light) .sun { fill: #1e1e2e; }
+    :global(.light) .sun { fill: #2e3440; }
 </style>
 <script is:inline >
     const theme = (() => {
