--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,12 +5,12 @@ import '../styles/global.css';
 const { pageTitle } = Astro.props;
 ---
 <!DOCTYPE html>
-<html transition:animate="none" lang="en">
+<html transition:animate="none" lang="zh">
 	<head>
         <meta charset="utf-8" />
         <meta name="description" content="Astro description">
         <meta name="viewport" content="width=device-width" />
-        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <link rel="icon" type="image/svg+xml" href="/space.webp" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="preload" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Pacifico&display=swap" as="style">
