--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,9 +4,9 @@ const year = new Date().getFullYear();
 <footer>
     <div class="center">
         <ul class="footer">
-            <li class="icon__btn"><a class="icon__link" href="#" target="_blank"><span class="git-icon">GitHub</span></a></li>
-            <li class="icon__btn"><a class="icon__link" href="#" target="_blank"><span class="instagram-icon">Instagram</span></a></li>
-            <li class="icon__btn"><a class="icon__link" href="#" target="_blank"><span class="threads-icon">Threads</span></a></li>
+            <li class="icon__btn"><a class="icon__link" href="https://github.com/cua843" target="_blank"><span class="git-icon">GitHub</span></a></li>
+            <li class="icon__btn"><a class="icon__link" href="https://www.instagram.com/cua843_" target="_blank"><span class="instagram-icon">Instagram</span></a></li>
+            <li class="icon__btn"><a class="icon__link" href="#https://www.threads.net/@cua843_" target="_blank"><span class="threads-icon">Threads</span></a></li>
         </ul>
         <small>&copy; {year} Milky-Way by <a class="footer__link" href="https://github.com/ttomczak3">ttomczak</a>. All Rights Reserved.</small>
     </div>
