--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -249,15 +249,15 @@ footer {
 
 
 .git-icon {
-    content: url("/github-mark-white.svg");
+    content: url("/public/github-mark-white.svg");
 }
 
 .instagram-icon {
-    content: url("/instagram-white.svg");
+    content: url("/public/instagram-white.svg");
 }
 
 .threads-icon {
-    content: url("/threads-white.svg");
+    content: url("/public/threads-white.svg");
 }
 
 /* 404 */
