--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ const year = new Date().getFullYear();
             <li class="icon__btn"><a class="icon__link" href="https://www.instagram.com/cua843_" target="_blank"><span class="instagram-icon">Instagram</span></a></li>
             <li class="icon__btn"><a class="icon__link" href="#https://www.threads.net/@cua843_" target="_blank"><span class="threads-icon">Threads</span></a></li>
         </ul>
-        <small>&copy; {year} Milky-Way by <a class="footer__link" href="https://github.com/ttomczak3">ttomczak</a>. All Rights Reserved.</small>
+        <small>Copyright &copy; <a class="footer__link" href="https://github.com/cua843">cua843</a> {year} - All right reserved </small><br />
+        <small>Powered by <a class="footer__link" href="https://github.com/ttomczak3/Milky-Way">ttomczak</a>.</small>
     </div>
 </footer>
-
