--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ const { pageTitle } = Astro.props;
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="preload" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Pacifico&display=swap" as="style">
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Pacifico&display=swap" rel="stylesheet">
-        <src url('public/jf-openhuninn-2.1.ttf') format('truetype')></src>     
+        <link rel="format('truetype')" href="/public/jf-openhuninn-2.1.ttf">     
         <meta name="generator" content={Astro.generator} />
         <title>{pageTitle}</title>
 	</head>
