--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,7 +10,10 @@
     --header: 'jf-openhuninn-2.1', cursive;
     --body: 'jf-openhuninn-2.1', sans-serif; 
 }
-
+font-face{
+    src: local("jf-openhuninn-2.1") ,
+    url('./public/jf-openhuninn-2.1.woff') format("woff"),
+}
 html {
     background-color: var(--background);
     color: var(--text);
