--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ const pageTitle = "cua843";
 ---
 <Layout pageTitle={pageTitle}>
     <div class="gif">
-        <img width="300" height="259" alt="RaccoonSpaceGif" src="/space.webp"/>
+        <img width="300" height="259" alt="RaccoonSpaceGif" src="/favicon.ico"/>
     </div>
     <h1>cua843</h1>
     <span class="badge">自由開發者</span>
