--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,7 +11,7 @@
     --body: 'jf-openhuninn-2.1', sans-serif; 
 }
 @font-face{
-    font-family: "jf-openhuninn-2.1",system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'jf-openhuninn-2.1';
     src: local("jf-openhuninn-2.1") ,
     url('./public/jf-openhuninn-2.1.woff') format("woff"),
     url('./public/jf-openhuninn-2.1.ttf') format("opentype"),
