--- a/src/components/CardPost.astro
+++ b/src/components/CardPost.astro
@@ -6,7 +6,7 @@ interface Props {
     date: string;
 }
 
-const { url, image, title, date } = Astro.props;
+const { url, image, title } = Astro.props;
 ---
 
 <li class="card">
