--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,6 +9,7 @@ const year = new Date().getFullYear();
             <li class="icon__btn"><a class="icon__link" href="https://www.threads.net/@cua843_" target="_blank"><span class="threads-icon">Threads</span></a></li>
         </ul>
         <small>Copyright &copy; <a class="footer__link" href="https://github.com/cua843">cua843</a> {year} - All right reserved </small><br />
-        <small>Powered by <a class="footer__link" href="https://github.com/ttomczak3/Milky-Way">ttomczak</a>.</small>
+        <small>Powered by <a class="footer__link" href="https://github.com/ttomczak3/Milky-Way">ttomczak</a></small>
+        <small>Fonts from <a class="footer__link" href="https://github.com/justfont/open-huninn-font">open-huninn-font</a></small>
     </div>
 </footer>
