--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,11 +10,8 @@ const { pageTitle } = Astro.props;
         <meta charset="utf-8" />
         <meta name="description" content="Astro description">
         <meta name="viewport" content="width=device-width" />
-        <link rel="icon" href="../favicon.png" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link rel="preload" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Pacifico&display=swap" as="style">
-        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Pacifico&display=swap" rel="stylesheet">     
+        <link rel="icon" href="/favicon.png"/>
+        <link rel="preconnect" href="./public/jf-openhuninn-2.1.woff">
         <meta name="generator" content={Astro.generator} />
         <title>{pageTitle}</title>
 	</head>
