--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -26,10 +26,10 @@ const { url, image, title, body , platform, stack} = Astro.props;
             {title}
         </h3>
         <p class="card__platform">
-            {title}
+            {platform}
         </p>
         <p class="card__stack">
-            {title}
+            {stack}
         </p>
         <p class="card__txt">
             {body}
