--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -25,10 +25,10 @@ const { url, image, title, body , platform, stack} = Astro.props;
         <h3 class="card__title">
             {title}
         </h3>
-        <span class="card__platform">
+        <span class="badge">
             {platform}
         </span><br>
-        <span class="card__stack">
+        <span class="badge">
             {stack}
         </span>
         <p class="card__txt">
