--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,25 +7,25 @@ const pageTitle = "cua843";
         <img width="300" height="259" alt="RaccoonSpaceGif" src="space.webp"/>
     </div>
     <h1>cua843</h1>
-    <span class="badge">自由開發者</span>
-    <h2>About</h2>
+    <span class="badge">學生</span>
+    <h2>關於-About</h2>
     <p>
-        <br>
-        興趣是 3D printing🌕<br>
-        嘗試學習中：python🐍、網頁安全、SQL、網頁設計<br>
-        是個01/30的♒
+        興趣是 3D printing🌕，目前嘗試學習中：python🐍、網頁安全、SQL、網頁設計<br>
+        是個01/30的♒，這邊應該會用來整理我開發過的專案之類的
     </p>
+    <h2>經歷-Experience</h2>
     <p>
-        <br>
-        這邊應該會用來整理我開發過的專案之類的
+        <ul><li>身障技能競賽-資料庫建置：第二名🥈</li><li>第14屆自科社幹部-網管</li></ul>
     </p>
+    <!--
+    <h2>技能-Skills</h2>
+    <div class="skills center"> 
+    </div>
+     -->
     <div class="center">
         <a href="/works/">
             <button class="btn">My portfolio</button>
         </a>
-    </div>
-    <h2>Skills</h2>
-    <div class="skills center"> 
     </div>
 </Layout>
 
