--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,12 +10,15 @@ const pageTitle = "cua843";
     <span class="badge">學生</span>
     <h2>關於-About</h2>
     <p>
-        興趣是 3D printing🌕，目前嘗試學習中：python🐍、網頁安全、SQL、網頁設計<br>
+        興趣是 3D printing🌕，目前嘗試學習中：python🐍、網頁安全、SQL、網頁設計。
         是個01/30的♒，這邊應該會用來整理我開發過的專案之類的
     </p>
     <h2>經歷-Experience</h2>
     <p>
-        <ul><li>身障技能競賽-資料庫建置：第二名🥈</li><li>第14屆自科社幹部-網管</li></ul>
+        <ul>
+            <li>18th身障技能競賽-資料庫建置：第二名🥈</li>
+            <li>14th自科社幹部-網管</li>
+        </ul>
     </p>
     <!--
     <h2>技能-Skills</h2>
@@ -24,7 +27,10 @@ const pageTitle = "cua843";
      -->
     <div class="center">
         <a href="/works/">
-            <button class="btn">My portfolio</button>
+            <button class="btn">Projects</button>
+        </a>
+        <a href="/posts/">
+            <button class="btn">Blog</button>
         </a>
     </div>
 </Layout>
