--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ const pageTitle = "cua843";
     <span class="badge">學生</span>
     <h2>關於-About</h2>
     <p>
-        興趣是 3D printing🌕，目前嘗試學習中：python🐍、網頁安全、SQL、網頁設計。
+        高三生，雖然是選手，但真正的技能樹有點混亂... ，目前嘗試學習中：3D printing、Python🐍、網頁安全、網頁設計。
         是個01/30的♒，這邊應該會用來整理我開發過的專案之類的
     </p>
     <h2>經歷-Experience</h2>
