--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,12 +3,11 @@ import ThemeIcon from './ThemeIcon.astro';
 ---
 <div class="navbar">
     <div class="navbar__title">
-        <a href="/">cua843</a>
+        <a href="/">cua843'site</a>
     </div>
     <div class="navbar__menu">
-        <a href="/works/">Works</a>
-        <a href="/posts/">Posts</a>
-        <!--<a href="https://github.com/ttomczak3/Milky-Way" target="_blank">GitHub</a> -->
+        <a href="/works/">Projects</a>
+        <a href="/posts/">Blog</a>
         <ThemeIcon />
     </div>
 </div>
