--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,8 +10,7 @@ const pageTitle = "cua843";
     <span class="badge">學生</span>
     <h2>關於-About</h2>
     <p>
-        高三生，雖然是選手，但真正的技能樹有點混亂... ，目前嘗試學習中：3D printing、Python🐍、網頁安全、網頁設計。
-        是個01/30的♒，這邊應該會用來整理我開發過的專案之類的
+        高三生，是個01/30的♒，雖然是選手，但真正的技能樹有點混亂... 目前嘗試學習中：Python🐍、網頁安全、網頁設計，這邊應該會用來整理我開發過的專案之類的
     </p>
     <h2>經歷-Experience</h2>
     <p>
@@ -20,11 +19,19 @@ const pageTitle = "cua843";
             <li>14th自科社幹部-網管</li>
         </ul>
     </p>
-    <!--
     <h2>技能-Skills</h2>
+    <p>
+        <ul>
+            <li>3D列印(設備操作、維修、維護)</li>
+            <li>一點Python</li>
+            <li>Access資料庫(選手職類)</li>
+        </ul>
+    </p>
+    <!-- 
     <div class="skills center"> 
     </div>
-     -->
+    -->
+    <!-- 
     <div class="center">
         <a href="/works/">
             <button class="btn">Projects</button>
@@ -32,6 +39,7 @@ const pageTitle = "cua843";
         <a href="/posts/">
             <button class="btn">Blog</button>
         </a>
+    -->
     </div>
 </Layout>
 
