--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -6,8 +6,8 @@ import ThemeIcon from './ThemeIcon.astro';
         <a href="/">cua843'site</a>
     </div>
     <div class="navbar__menu">
-        <a href="/works/">Projects</a>
-        <a href="/posts/">Blog</a>
+        <a href="/works/">Works</a>
+        <a href="/posts/">Posts</a>
         <ThemeIcon />
     </div>
 </div>
