--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ const pageTitle = "cua843";
         高三生，是個01/30的♒，雖然是選手，但真正的技能樹有點混亂...學習中：Python🐍、網頁安全、網頁設計
     </p>
     <p>
-        目前想自己寫個網頁主題(模板)和整理ESP開發板內容做成教學，這邊應該會用來整理我開發過的專案之類的
+        目前想自己寫個網頁主題(模板)和整理ESP開發板內容做成教學，這邊應該會用來紀錄我開發過的專案之類的
     </p>
     <h2>經歷-Experience</h2>
     <p>
