--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,10 +10,17 @@ const pageTitle = "cua843";
     <span class="badge">學生</span>
     <h2>關於-About</h2>
     <p>
-        高三生，是個01/30的♒，雖然是選手，但真正的技能樹有點混亂......學習中：Python🐍、網頁安全、網頁設計
+        高三生，是個01/30的♒，雖然是選手，但真正的技能樹有點混亂......這邊應該會用來紀錄我開發過的專案之類的
     </p>
     <p>
-        目前想自己寫個網頁主題(模板)和整理ESP開發板內容做成教學，這邊應該會用來紀錄我開發過的專案之類的
+    <h3>未來目標🗒️</h3>
+        <ul>
+            <li>ESP開發板內容教學</li>
+            <li>Python相關開發</li>
+            <li>跨領域系統整合</li>
+            <li>網頁主題(模板)開發</li>
+            <li>學習資訊安全、網頁設計相關技能</li>
+        </ul>
     </p>
     <h2>經歷-Experience</h2>
     <p>
@@ -26,7 +33,7 @@ const pageTitle = "cua843";
     <p>
         <ul>
             <li>3D列印(設備操作、維修、維護)</li>
-            <li>一點Python</li>
+            <li>一點Python🐍</li>
             <li>Access資料庫(選手職類)</li>
         </ul>
     </p>
