--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,15 +10,13 @@ const pageTitle = "cua843";
     <span class="badge">學生</span>
     <h2>關於-About</h2>
     <p>
-        高三生，是個01/30的♒，雖然是選手，但真正的技能樹有點混亂......這邊應該會用來紀錄我開發過的專案之類的
+        高三生，是個01/30的♒，是個非常感性的人類。雖然是選手，但真正的技能好像有點混亂:D......這邊應該會用來紀錄我開發過的專案之類的，還有放一些奇怪的東西(？
     </p>
     <p>
     <h3>未來目標🗒️</h3>
         <ul>
-            <li>ESP開發板內容教學</li>
-            <li>Python相關開發</li>
-            <li>跨領域系統整合</li>
-            <li>網頁主題(模板)開發</li>
+            <li>ESP開發板及MicroPython內容教學</li>
+            <li>跨領域合作開發</li>
             <li>學習資訊安全、網頁設計相關技能</li>
         </ul>
     </p>
