--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ const pageTitle = "cua843";
     <span class="badge">學生</span>
     <h2>關於-About</h2>
     <p>
-        高三生，是個01/30的♒，是個非常感性的人類。雖然是選手，但真正的技能好像有點混亂:D......這邊應該會用來紀錄我開發過的專案之類的，還有放一些奇怪的東西(？
+        高三生，是個01/30的♒。雖然是選手，但真正的技能好像有點混亂:D......這邊應該會用來紀錄我開發過的專案之類的，還有放一些奇怪的東西(？
     </p>
     <p>
     <h3>未來目標🗒️</h3>
