--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,8 +14,9 @@
 @font-face{
     font-family: 'jf-openhuninn-2.1';
     src: local("jf-openhuninn-2.1") ,
+    url('./public/jf-openhuninn-2.1.woff2') format("woff2"),
     url('./public/jf-openhuninn-2.1.woff') format("woff"),
-    url('./public/jf-openhuninn-2.1.ttf') format("opentype"),
+    
 }
 
 html {
